--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,16 @@
         tools:targetApi="31">
 
         <activity
-            android:name="com.brandon.presentation.MainActivity"
+            android:name="com.brandon.presentation.splash.SplashActivity"
+            android:theme="@style/Theme.KmongClone.Splash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name="com.brandon.presentation.MainActivity" />
 
     </application>
 
